deploy/k8s/overlays/prod/ingress-www-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelendingadvisor-www-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://homelendingadvisor.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: homelendingadvisor-www-tls
      hosts:
        - www.homelendingadvisor.lol
  rules:
    - host: www.homelendingadvisor.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelendingadvisor
                port:
                  number: 80
