deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelendingadvisor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: homelendingadvisor-apex-tls
      hosts:
        - homelendingadvisor.lol
  rules:
    - host: homelendingadvisor.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelendingadvisor
                port:
                  number: 80
